--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-kedro_pipeline/data/
+kedro_pipeline/data/**
+!kedro_pipeline/data/**/
