--- a/kedro_pipeline/conf/base/parameters_data_science.yml
+++ b/kedro_pipeline/conf/base/parameters_data_science.yml
@@ -19,8 +19,8 @@ model_options:
     - Shell proportion
     - Shell area
   # create_rf_model parameters
-  max_depth: "${runtime_params:max_depth, Null}"
-  max_features: "${runtime_params:max_features, 1.0}"
-  n_estimators: "${runtime_params:n_estimators, 100}"
-  min_samples_leaf: "${runtime_params:min_samples_leaf, 1}"
-  min_samples_split: "${runtime_params:min_samples_split, 2}"
+  max_depth: "${runtime_params:max_depth, 8}"
+  max_features: "${runtime_params:max_features, 'sqrt'}"
+  n_estimators: "${runtime_params:n_estimators, 125}"
+  min_samples_leaf: "${runtime_params:min_samples_leaf, 2}"
+  min_samples_split: "${runtime_params:min_samples_split, 7}"
