--- a/kedro_pipeline/requirements.txt
+++ b/kedro_pipeline/requirements.txt
@@ -10,3 +10,7 @@ pytest-mock>=1.7.1, <2.0
 pytest~=7.2
 ruff~=0.1.8
 scikit-learn~=1.0
+wandb~=0.16.5
+autogluon.tabular~=1.1.0
+pyarrow~=15.0.2
+fastparquet~=2024.2.0
